hashi_vault/openresty/open-app.yml
---
kind: Service
apiVersion: v1
metadata:
  name: openresty
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    k8s-app: openresty

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: openresty
  labels:
    k8s-app: openresty
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      k8s-app: openresty
  template:
    metadata:
      labels:
        k8s-app: openresty
    spec:
      #### Добавлен для работы vault
      serviceAccountName: application-sa
      containers:
        - name: openresty
          image: openresty/openresty:centos-rpm
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "0.2"
              memory: "400Mi"
            requests:
              cpu: "0.1"
              memory: "200Mi"
          volumeMounts:
            - name: config
              mountPath: /usr/local/openresty/nginx/html/
      volumes:
        - name: config-template
          configMap:
            name: openresty
        - name: config
          emptyDir:
            medium: Memory
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "vault-application"
