hashi_vault/openresty/ingress-app.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: application
  annotations:
    #kubernetes.io/ingress.class: "system-ingress"
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: monitoring-issuer
spec:
  rules:
    - host: "app.cluster.local"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: openresty
                port:
                  number: 80
